# MineFite-RustCleaner

./: Cargo.toml  build.rs
src/: cleaner.rs  config.rs  main.rs  ui_bridge.rs
ui/: main.slint  theme.slint
