[package]
name = "LogCleaner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "LogCleaner"
path = "src/main.rs"

[dependencies]
slint = "1.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
rfd = "0.14"
i-slint-backend-winit = "1.5.1"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4"

[build-dependencies]
slint-build = "1.5.1"
winres = "0.1"
